
AM_CPPFLAGS = @Xyce_INCS@

noinst_LTLIBRARIES = libAnalysis.la

libAnalysis_la_SOURCES = \
  $(srcdir)/src/N_ANP_AnalysisBase.C \
  $(srcdir)/src/N_ANP_AnalysisInterface.C \
  $(srcdir)/src/N_ANP_AnalysisManager.C \
  $(srcdir)/src/N_ANP_Dakota.C \
  $(srcdir)/src/N_ANP_DCSweep.C \
  $(srcdir)/src/N_ANP_HB.C \
  $(srcdir)/src/N_ANP_AC.C \
  $(srcdir)/src/N_ANP_MOR.C \
  $(srcdir)/src/N_ANP_InnerLevelSolve.C \
  $(srcdir)/src/N_ANP_ModelEvaluator.C \
  $(srcdir)/src/N_ANP_ModelEvaluator_Stateless.C \
  $(srcdir)/src/N_ANP_MPDE.C \
  $(srcdir)/src/N_ANP_OutputMgrAdapter.C \
  $(srcdir)/src/N_ANP_Step.C \
  $(srcdir)/src/N_ANP_SweepParam.C \
  $(srcdir)/src/N_ANP_Transient.C \
  $(srcdir)/src/N_ANP_Report.C \
  $(srcdir)/include/N_ANP_fwd.h \
  $(srcdir)/include/N_ANP_AnalysisBase.h \
  $(srcdir)/include/N_ANP_AnalysisInterface.h \
  $(srcdir)/include/N_ANP_AnalysisManager.h \
  $(srcdir)/include/N_ANP_Dakota.h \
  $(srcdir)/include/N_ANP_DCSweep.h \
  $(srcdir)/include/N_ANP_HB.h \
  $(srcdir)/include/N_ANP_ModelEvaluator.h \
  $(srcdir)/include/N_ANP_ModelEvaluator_Stateless.h \
  $(srcdir)/include/N_ANP_MPDE.h \
  $(srcdir)/include/N_ANP_OutputMgrAdapter.h \
  $(srcdir)/include/N_ANP_Step.h \
  $(srcdir)/include/N_ANP_SweepParam.h \
  $(srcdir)/include/N_ANP_AC.h \
  $(srcdir)/include/N_ANP_MOR.h \
  $(srcdir)/include/N_ANP_Report.h \
  $(srcdir)/include/N_ANP_Transient.h 
  
